--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   cloud_firestore: 0.13.4
   firebase_storage: 3.1.3
   firebase_core: 0.4.4
-
+  permission_handler: ^3.0.2
+  contacts_service: ^0.3.10
   image_picker: ^0.6.3+4
 
 dev_dependencies:
