--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   permission_handler: ^3.0.2
   contacts_service: ^0.3.10
   image_picker: ^0.6.3+4
+  popup_menu: ^1.0.5
 
 dev_dependencies:
   flutter_test:
