--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -18,35 +18,36 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleTypeRole</key>
-            <string>Editor</string>
-            <key>CFBundleURLSchemes</key>
-            <array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>SharePhotos</string>
                 <string>com.googleusercontent.apps.1053757866246-6soavab5bgcagpfrhsuh9tpcbieqlfpq</string>
-            </array>
-        </dict>
-    </array>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-    <key>NSCameraUsageDescription</key>
-    <string>B-connect need to access camera.</string>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>This app needs access to location when open and in the background.</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>This app needs access to location when in the background.</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>This app needs access to location in the background.</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>B-connect need to access microphone.</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>B-connect need to access photos.</string>
-    <key>NSContactsUsageDescription</key>
-    <string>This app requires contacts access to function properly.</string>  
+	<key>NSCameraUsageDescription</key>
+	<string>B-connect need to access camera.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs access to location when open and in the background.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to location when in the background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location in the background.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>B-connect need to access microphone.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>B-connect need to access photos.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>This app requires contacts access to function properly.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
