--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,13 @@ dependencies:
   firebase_storage: 3.1.3
   firebase_core: 0.4.4
   permission_handler: ^3.0.2
-  contacts_service: ^0.3.10
+#  contacts_service: ^0.3.10
   image_picker: ^0.6.3+4
   popup_menu: ^1.0.5
   platform_action_sheet: ^0.0.3
+#  contact_picker: ^0.0.2
+  receive_sharing_intent: ^1.3.3
+
 
 dev_dependencies:
   flutter_test:
