--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   platform_action_sheet: ^0.0.3
 #  contact_picker: ^0.0.2
   receive_sharing_intent: ^1.3.3
+  url_launcher: ^5.1.2
 
 
 dev_dependencies:
