--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,10 @@ dependencies:
   firebase_storage: 3.1.3
   firebase_core: 0.4.4
   permission_handler: ^3.0.2
-#  contacts_service: ^0.3.10
   image_picker: ^0.6.3+4
   popup_menu: ^1.0.5
   platform_action_sheet: ^0.0.3
-#  contact_picker: ^0.0.2
+  flutter_contact: ^0.5.3
   receive_sharing_intent: ^1.3.3
   url_launcher: ^5.1.2
 
