--- a/ios/Share Extension/Share Extension.entitlements
+++ b/ios/Share Extension/Share Extension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.kondasri</string>
+		<string>group.com.knowit.knowItMaster</string>
 	</array>
 </dict>
 </plist>
