--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="know_it_master"
+        android:label="Know It"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
